--- a/package.json
+++ b/package.json
@@ -65,5 +65,8 @@
   "lint-staged": {
     "*.json": "prettier-package-json --write",
     "*.{js,css,md}": "prettier --write"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
